--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
 /* Tailwind base import */
 @import "tailwindcss";
 
+@import "atropos/css";
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -24,7 +26,7 @@
 }
 
 body {
-  background: var(--background);
+  background-color: #171717;
   color: var(--foreground);
   font-family: 'Sora', Arial, Helvetica, sans-serif;
 }
